<resources>
    <string name="app_name">Aplikasi Meddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Content Desc Splashscreen   -->
    <string name="logo_splashscreen">Logo Splashscreen</string>

    <!-- Splash Screen -->
    <string name="logo_name">MEDDY</string>

    <!-- Content Desc Onboarding 1 -->
    <string name="img_background">Background Frame</string>
    <string name="img_character1">Character Onboarding 1</string>
    <string name="dot">Dot to Slide</string>
    <string name="img_next1">Next 1</string>

    <!-- Onboading 1 -->
    <string name="lewati">Lewati</string>
    <string name="desc_onboarding1">Pahami ragam obat dan cara pakainya sesuai dengan dosis demi kesehatan Anda.</string>

    <!-- Beranda -->
    <string name="selamat_datang">Selamat Datang</string>
    <string name="nama">Maylani</string>
    <string name="apotek_terdekat">Apotek Terdekat</string>
    <string name="pengingat">Pengingat</string>
    <string name="nama_obat">Amoxicillin</string>
    <string name="waktu">10:15 Pagi</string>

    <!--    card Apotek Terdekat-->
    <string-array name="nama_apotek">
        <item>Apotek Agatha Farma</item>
        <item>Apotek Kimia Farma 455</item>
        <item>Apotek Kimia Farma Bintan</item>
        <item>Apotek Mitra Husada-TJ, Uban</item>
    </string-array>

    <string name="agatha_farma">Apotek Agatha Farma</string>
    <string name="kimia_farma_455">Apotek Kimia Farma 455</string>
    <string name="kimia_farma_bintan">Apotek Kimia Farma Bintan</string>
    <string name="mitra_husada">Apotek Mitra Husada-TJ, Uban</string>

    <string-array name="alamat_apotek">
        <item>Jl. Garuda Raya Blok B, No. 12</item>
        <item>Jl. Permaisuri, RT.001/RW.007</item>
        <item>Jl. Bintan No.656-658 Tanjung Pinang</item>
        <item>Jl. Permaisuri (Depan Bank BNI) Tanjung Uban</item>
    </string-array>

    <string name="alamat_agatha_farma">Jl. Garuda Raya Blok B, No. 12</string>
    <string name="alamat_kimia_farma_455">Jl. Permaisuri, RT.001/RW.007</string>
    <string name="alamat_kimia_farma_bintan">Jl. Bintan No.656-658 Tanjung Pinang</string>
    <string name="alamat_mitra_husada">Jl. Permaisuri (Depan Bank BNI) Tanjung Uban</string>

    <integer-array name="img_apotek">
        <item>@drawable/apotek_agatha_farma</item>
        <item>@drawable/apotek_kimia_farma_455</item>
        <item>@drawable/apotek_kimia_farma_bintan</item>
        <item>@drawable/apotek_kimia_farma_bintan</item>
    </integer-array>

    <integer-array name="image_obat">
        <item>@drawable/img_amox_hexpharm</item>
        <item>@drawable/img_amox_trihydrate</item>
        <item>@drawable/img_amox</item>
        <item>@drawable/img_amox_yusimox</item>
        <item>@drawable/img_amox_novapharin</item>
        <item>@drawable/img_amox_amemox</item>
    </integer-array>

    <string-array name="nama_obat">
        <item>Amoxicillin Hexpharm 500Mg/ 10 kaplet</item>
        <item>Amoxicillin Trihydrate Ogb Dexa Medica 500 Mg/ 10 kaplet</item>
        <item>Amoxicillin 250 Mg/ 10 kaplet</item>
        <item>YUSIMOX Sirup 125 ml Amoxicillin</item>
        <item>Amoxicillin Novapharin sirup kering 125 ml</item>
        <item>AMEMOX Sirup 60 ml</item>
    </string-array>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="takaran_obat">1 x 250mg</string>
    <string name="cd_icon_clock">Icon Clock</string>
    <string name="cd_line">Line</string>
    <string name="foto_obat">Foto Obat</string>
    <string name="artikel">Artikel &amp; Berita</string>
    <string name="meddy">MEDDY</string>
    <string name="lokasimu">Lokasimu</string>
    <string name="nama_lokasi">Teluk Sasah</string>
    <string name="riwayat_pencarian">Riwayat Pencarian</string>
    <string name="lihat_lainnya">Lihat lainnya</string>
    <string name="lihat_semua_apotek_terdekat">Lihat semua Apotek terdekat</string>
    <string name="icon_lokasi">icon_lokasi</string>
    <string name="login_logo">Login Logo</string>
    <string name="login_question">Belum punya akun?</string>
    <string name="login_buat_sekarang">Buat Sekarang</string>
    <string name="register_ayo_daftar">Ayo Daftar!</string>
    <string name="cb_register_text">Saya setuju dengan</string>
    <string name="register_syarat">Syarat dan ketentuan</string>
    <string name="btn_register">Daftar</string>
    <string name="memilih_apoteker">Bagaimana Cara Memilih Apoteker?</string>
    <string name="pilih_konseling">Pilih konseling</string>
    <string name="hub_apoteker">Hubungi apoteker melalui kontak yang tersedia</string>
    <string name="desc_onboarding2">Tetap jaga konsistensi konsumsi obatmu sesuai dengan anjuran.</string>
    <string name="img_onboarding2">Image Onboarding 2</string>
    <string name="img_onboarding_3">Image Onboarding 3</string>
    <string name="img_next_3">Next 3</string>
    <string name="img_next_2">Next 2</string>
    <string name="desc_onboarding3">Cari informasi Apotek yang terdekat denganmu.</string>
    <string name="img_onboarding4">Image Onboarding 4</string>
    <string name="desc_onboarding4">Jangan khawatir, Kami akan menyimpan data konsultasi obat Anda.</string>
    <string name="img_next_4">Next 4</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="pagi">Pagi</string>
    <string name="siang">Siang</string>
    <string name="sore">Sore</string>
    <string name="dosis">Dosis</string>
    <string name="jml_obat">Jumlah obat tersisa (jumlah tablet)</string>
    <string name="anjuran">Anjuran obat per konsumsi</string>
    <string name="obat">Obat</string>
    <string name="apotek">Apotek</string>
    <string name="register_nama">Nama</string>
    <string name="register_email">Email Aktif</string>
    <string name="register_password">Kata Sandi</string>
    <string name="register_confirm_password">Konfirmasi Sandi</string>
    <string name="ibuprofen">Manfaat Ibuprofen Serta Efek Samping..</string>
    <string name="tanggal_artikel">25 Juni 2023</string>

</resources>