<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.intro.Onboarding4Fragment">

    <FrameLayout
        android:id="@+id/bg_frame_intro4"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:background="@drawable/img_12"
        android:contentDescription="@string/img_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_onboard4"
            android:layout_width="308dp"
            android:layout_height="234dp"
            android:layout_marginHorizontal="48dp"
            android:layout_gravity="center"
            android:src="@drawable/img_onboard_4"
            android:contentDescription="@string/img_onboarding4"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_desc_onboarding4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:text="@string/desc_onboarding4"
        app:layout_constraintTop_toBottomOf="@+id/bg_frame_intro4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_intro_slider4"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/dot"
        app:srcCompat="@drawable/img_16"
        app:layout_constraintTop_toBottomOf="@+id/bg_frame_intro4"
        app:layout_constraintBottom_toTopOf="@+id/iv_btn_next4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_btn_next4"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/img_next_4"
        app:srcCompat="@drawable/img_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>