<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CariFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header_cari_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_logo_meddy"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/logo_name"
            android:src="@drawable/img_logo_meddy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_meddy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meddy"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:lineHeight="28dp"
            android:textSize="8sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_meddy"
            app:layout_constraintStart_toStartOf="@+id/iv_logo_meddy"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo_meddy"/>

        <TextView
            android:id="@+id/tv_lokasimu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/lokasimu"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:lineHeight="28dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_logo_meddy"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_icon_lokasi"
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/img_icon_lokasi"
            android:contentDescription="@string/icon_lokasi"
            app:layout_constraintStart_toStartOf="@+id/tv_lokasimu"
            app:layout_constraintTop_toBottomOf="@+id/tv_lokasimu"/>

        <TextView
            android:id="@+id/tv_nama_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lokasi"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_lokasi"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_lokasi"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_lokasi"/>

        <SearchView
            android:id="@+id/sv_search"
            android:background="@drawable/bg_sv_beranda"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:queryHint="Cari nama obat, apotek"
            android:iconifiedByDefault="false"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_meddy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_riwayat_pencarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/riwayat_pencarian"
        android:fontFamily="@font/montserrat_semi_bold"
        android:lineHeight="28dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_header_cari_1"/>

    <TextView
        android:id="@+id/tv_lihat_lainnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lihat_lainnya"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_riwayat_pencarian"/>

    <ImageView
        android:id="@+id/iv_open_down"
        android:layout_width="20dp"
        android:layout_height="15dp"
        android:src="@drawable/img_23"
        app:layout_constraintStart_toEndOf="@+id/tv_lihat_lainnya"
        app:layout_constraintTop_toTopOf="@+id/tv_lihat_lainnya"
        app:layout_constraintBottom_toBottomOf="@+id/tv_lihat_lainnya"/>

    <TextView
        android:id="@+id/tv_apotek_terdekat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/apotek_terdekat"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lihat_lainnya"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_cari_apotek_terdekat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        tools:listitem="@layout/item_card_cari_apotek_terdekat"
        app:layout_constraintTop_toBottomOf="@+id/tv_apotek_terdekat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_btn_lihat_apotek"/>

    <ImageView
        android:id="@+id/iv_btn_lihat_apotek"
        android:layout_width="250dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_35"
        android:layout_marginBottom="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_card_cari_apotek_terdekat"/>

    <TextView
        android:id="@+id/tv_lihat_semua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_semua_apotek_terdekat"
        android:textSize="12sp"
        android:lineHeight="20dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="@+id/iv_btn_lihat_apotek"
        app:layout_constraintTop_toTopOf="@+id/iv_btn_lihat_apotek"
        app:layout_constraintBottom_toBottomOf="@+id/iv_btn_lihat_apotek"/>


</androidx.constraintlayout.widget.ConstraintLayout>