<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.main.search.HasilCariContainerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_hasil_cari_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo_meddy_hasil_cari"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/logo_name"
            android:src="@drawable/img_logo_meddy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_meddy_hasil_cari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:lineHeight="28dp"
            android:text="@string/meddy"
            android:textColor="@color/white"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_logo_meddy_hasil_cari"
            app:layout_constraintStart_toStartOf="@+id/iv_logo_meddy_hasil_cari"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo_meddy_hasil_cari" />

        <TextView
            android:id="@+id/tv_lokasimu_hasil_cari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:lineHeight="28dp"
            android:text="@string/lokasimu"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_logo_meddy_hasil_cari"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_icon_lokasi_hasil_cari"
            android:layout_width="16dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon_lokasi"
            android:src="@drawable/img_icon_lokasi"
            app:layout_constraintStart_toStartOf="@+id/tv_lokasimu_hasil_cari"
            app:layout_constraintTop_toBottomOf="@+id/tv_lokasimu_hasil_cari" />

        <TextView
            android:id="@+id/tv_nama_lokasi_hasil_cari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nama_lokasi"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_icon_lokasi_hasil_cari"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_lokasi_hasil_cari"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_lokasi_hasil_cari" />

        <SearchView
            android:id="@+id/sv_search_hasil_cari"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_sv_beranda"
            android:iconifiedByDefault="false"
            android:queryHint="Cari nama obat, apotek"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meddy_hasil_cari" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_filter_cari_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_hasil_cari_container"
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_hasil_cari_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_filter_cari_container" />
</androidx.constraintlayout.widget.ConstraintLayout>